<resources>
    <string name="app_name">MidiRig</string>

    <string name="menu_item_settings_title">Settings</string>
    <string name="menu_item_refresh_title">Refresh</string>

    <string name="pref_osc_remote_host_title">Midirig host IP address</string>
    <string name="pref_osc_remote_host_summary"></string>
    <string name="pref_osc_output_port_title">Midirig host port</string>
    <string name="pref_osc_output_port_summary">The port to send OSC messages to</string>

    <string name="pref_osc_input_port_title">Input port</string>
    <string name="pref_osc_input_port_summary">The port number on this device to listen for incoming OSC messages on</string>

    <string name="pref_alphabetical_sort_title">Sort alphabetically</string>
    <string name="pref_alphabetical_sort_summary">Sort alphabetically (default is numerical sort)</string>

    <string name="pref_demo_mode_title">Demo mode</string>
    <string name="pref_demo_mode_summary">Use app with dummy data</string>

</resources>
